--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repo: ${{ github.repository }}
-          author: "jrdeng"
+          author: "briteming"
           output_json: ./issues.json
 
       - name: Checkout current repo (to ./work_dir/)
